--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
-    "stripe": "^13.8.0"
+    "stripe": "^13.8.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/node": "latest",
